Bug 212839 don't scroll trees to negative top rows r=varga sr=rbs a=asa